# Fractol

./: CMakeLists.txt  Makefile  draw.c  fractol.h  main.c
src/: draw.c  events.c  fractals.c  fractol.h  julia.c  main.c  mandelabs.c  mandelbrot.c  mandelcube.c
